버전 업데이트, Const 클래스 관련 수정